index.css + index.js added. HTML testing.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
+
+
 <html>
+
 <body>
 <h1>Pin Point Studios Documentation</h1>
 <p>I'm hosted with Git.</p>
+<button onClick='turnRed()'>Testing Testing :P</button>
+
 </body>
+
 </html>
+
