--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-
-
 <html>
-
-<body>
-<h1>Pin Point Studios Documentation</h1>
-<p>I'm hosted with Git.</p>
-<button onClick='turnRed()'>Testing Testing :P</button>
-
-</body>
-
+    <body>
+        <div id='testClass'>
+            <h1>Pin Point Studios Documentation</h1>
+            <p>I'm hosted with Git.</p>
+            <button onClick='turnRed()'>Testing Testing :P</button>
+        </div>
+    </body>
 </html>
 
