--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    function turnRed() {
+        console.log('TurnRed!')
+    }
+
     <body>
         <div id='testClass'>
             <h1>Pin Point Studios Documentation</h1>
